--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -1,8 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane fx:id="baseScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#handleDragged" onMousePressed="#handlePressed" prefHeight="542.0" prefWidth="798.0" styleClass="test" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.baseController">
-   
+<BorderPane fx:id="baseScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#handleDragged" onMousePressed="#handlePressed" prefHeight="640.0" prefWidth="1100.0" styleClass="parent" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.baseController">
+   <top>
+      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="1100.0" styleClass="bar" BorderPane.alignment="CENTER">
+         <children>
+            <HBox id="hboxBotones" fx:id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
+               <children>
+                  <Circle id="btnClose" fx:id="btnClose" fill="#c9365b" onMouseClicked="#handleVentanaClicks" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
+                  <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c9953b" onMouseClicked="#handleVentanaClicks" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </HBox>
+         </children>
+      </HBox>
+   </top>
+   <left>
+      <Circle fill="#0a0a0a" radius="221.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets left="95.0" />
+         </BorderPane.margin>
+      </Circle>
+   </left>
+   <right>
+      <VBox prefHeight="609.0" prefWidth="409.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" prefHeight="29.0" prefWidth="409.0" styleClass="textoSecundario" text="JavaFx Simulation">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="409.0" styleClass="textoPrimario" text="The Josephus Problem ">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="39.0" prefWidth="109.0" style="-fx-background-color: #61892F;" text="START" textAlignment="CENTER">
+               <VBox.margin>
+                  <Insets left="150.0" right="150.0" top="15.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+   </right>
 </BorderPane>
