--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -3,20 +3,23 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="baseScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#handleDragged" onMousePressed="#handlePressed" prefHeight="640.0" prefWidth="1100.0" styleClass="parent" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.baseController">
+<BorderPane fx:id="baseScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#handleDragged" onMousePressed="#handlePressed" prefHeight="640.0" prefWidth="1100.0" style="-fx-background-color: #191A1B;" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.baseController">
    <top>
-      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="1100.0" styleClass="bar" BorderPane.alignment="CENTER">
+      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="1100.0" style="-fx-background-color: #474B4F;" BorderPane.alignment="CENTER">
          <children>
             <HBox id="hboxBotones" fx:id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
                <children>
-                  <Circle id="btnClose" fx:id="btnClose" fill="#c9365b" onMouseClicked="#handleVentanaClicks" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
-                  <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c9953b" onMouseClicked="#handleVentanaClicks" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
+                  <Circle id="btnClose" fx:id="btnClose" fill="#c9365b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
+                  <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c9953b" onMouseClicked="#handleMin" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
                </children>
                <HBox.margin>
                   <Insets />
@@ -26,34 +29,52 @@
       </HBox>
    </top>
    <left>
-      <Circle fill="#0a0a0a" radius="221.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER">
+      <Circle fill="#00000083" radius="221.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets left="95.0" />
          </BorderPane.margin>
       </Circle>
    </left>
    <right>
-      <VBox prefHeight="609.0" prefWidth="409.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="609.0" prefWidth="409.0" style="-fx-background-color: #191A1B;" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="29.0" prefWidth="409.0" styleClass="textoSecundario" text="JavaFx Simulation">
+            <Label alignment="CENTER" prefHeight="29.0" prefWidth="409.0" style="-fx-text-fill: #48494B;" styleClass="textoSecundario" text="JavaFx Simulation">
                <font>
                   <Font size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets top="40.0" />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="409.0" styleClass="textoPrimario" text="The Josephus Problem ">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="409.0" style="-fx-text-fill: #E7EAE0;" text="The Josephus Problem ">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="39.0" prefWidth="109.0" style="-fx-background-color: #61892F;" text="START" textAlignment="CENTER">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="39.0" prefWidth="109.0" styleClass="botones" text="START" textAlignment="CENTER" textFill="#111111">
                <VBox.margin>
                   <Insets left="150.0" right="150.0" top="15.0" />
                </VBox.margin>
             </Button>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" />
+         </BorderPane.margin>
       </VBox>
    </right>
+   <bottom>
+      <AnchorPane prefHeight="41.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="btnMusic" layoutX="1053.0" layoutY="16.0" mnemonicParsing="false" onAction="#switchMusicState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones" AnchorPane.bottomAnchor="10.0">
+               <graphic>
+                  <ImageView fitHeight="19.0" fitWidth="20.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../icons/play.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
+   </bottom>
 </BorderPane>
