--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -65,7 +65,7 @@
    <bottom>
       <AnchorPane prefHeight="41.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnMusic" layoutX="1053.0" layoutY="16.0" mnemonicParsing="false" onAction="#switchMusicState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones" AnchorPane.bottomAnchor="10.0">
+            <Button fx:id="btnMusic" layoutX="1053.0" layoutY="16.0" mnemonicParsing="false" onAction="#toogleAudioState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones" AnchorPane.bottomAnchor="10.0">
                <graphic>
                   <ImageView fitHeight="19.0" fitWidth="20.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
                      <image>
