--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -18,8 +21,8 @@
          <children>
             <HBox id="hboxBotones" fx:id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
                <children>
-                  <Circle id="btnClose" fx:id="btnClose" fill="#c9365b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
-                  <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c9953b" onMouseClicked="#handleMin" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
+                  <Circle id="btnClose" fx:id="btnClose" fill="#cd234b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
+                  <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c39d2d" onMouseClicked="#handleMin" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
                </children>
                <HBox.margin>
                   <Insets />
@@ -51,11 +54,48 @@
                   <Font size="28.0" />
                </font>
             </Label>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="39.0" prefWidth="109.0" styleClass="botones" text="START" textAlignment="CENTER" textFill="#111111">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="43.0" prefWidth="409.0" style="-fx-text-fill: #E7EAE0;" text="Settings">
+               <font>
+                  <Font size="20.0" />
+               </font>
                <VBox.margin>
-                  <Insets left="150.0" right="150.0" top="15.0" />
+                  <Insets top="15.0" />
                </VBox.margin>
-            </Button>
+            </Label>
+            <Label prefHeight="27.0" prefWidth="179.0" style="-fx-text-fill: #E7EAE0;" text="Cantidad de Solados">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <JFXSlider />
+            <Label style="-fx-text-fill: #E7EAE0;" text="Soldado Inicial">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <JFXSlider layoutX="10.0" layoutY="204.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="409.0" spacing="30.0">
+               <children>
+                  <Label style="-fx-text-fill: #E7EAE0;" text="Sentido">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <JFXRadioButton style="-fx-text-fill: #E7EAE0;" text="Horario" />
+                  <JFXRadioButton layoutX="65.0" layoutY="10.0" style="-fx-text-fill: #E7EAE0;" text="Antihorario" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="409.0" spacing="20.0">
+               <children>
+                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" text="START" />
+                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" text="STOP" />
+                  <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="225.0" layoutY="19.0" prefHeight="40.0" prefWidth="75.0" text="RESET" />
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <JFXButton alignment="CENTER_RIGHT" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" minWidth="35.0" prefHeight="30.0" prefWidth="54.0" style="-fx-background-radius: 50;" />
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" />
@@ -65,9 +105,9 @@
    <bottom>
       <AnchorPane prefHeight="41.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnMusic" layoutX="1053.0" layoutY="16.0" mnemonicParsing="false" onAction="#toogleAudioState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones" AnchorPane.bottomAnchor="10.0">
+            <Button fx:id="btnMusic" contentDisplay="CENTER" layoutX="1032.0" layoutY="7.0" mnemonicParsing="false" onAction="#toggleAudioState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones" AnchorPane.bottomAnchor="7.0">
                <graphic>
-                  <ImageView fitHeight="19.0" fitWidth="20.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="soundIcon" fitHeight="19.0" fitWidth="20.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../icons/play.png" />
                      </image>
