--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -6,6 +6,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -31,13 +32,6 @@
          </children>
       </HBox>
    </top>
-   <left>
-      <Circle fill="#00000083" radius="221.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="95.0" />
-         </BorderPane.margin>
-      </Circle>
-   </left>
    <right>
       <VBox prefHeight="609.0" prefWidth="409.0" style="-fx-background-color: #191A1B;" BorderPane.alignment="CENTER">
          <children>
@@ -68,12 +62,16 @@
                </font>
             </Label>
             <JFXSlider />
-            <Label style="-fx-text-fill: #E7EAE0;" text="Soldado Inicial">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <JFXSlider layoutX="10.0" layoutY="204.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="409.0" spacing="30.0">
+               <children>
+                  <Label style="-fx-text-fill: #E7EAE0;" text="Soldado Inicial">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Spinner editable="true" />
+               </children>
+            </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="409.0" spacing="30.0">
                <children>
                   <Label style="-fx-text-fill: #E7EAE0;" text="Sentido">
@@ -96,16 +94,7 @@
                </VBox.margin>
             </HBox>
             <JFXButton alignment="CENTER_RIGHT" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" minWidth="35.0" prefHeight="30.0" prefWidth="54.0" style="-fx-background-radius: 50;" />
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="10.0" />
-         </BorderPane.margin>
-      </VBox>
-   </right>
-   <bottom>
-      <AnchorPane prefHeight="41.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="btnMusic" contentDisplay="CENTER" layoutX="1032.0" layoutY="7.0" mnemonicParsing="false" onAction="#toggleAudioState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones" AnchorPane.bottomAnchor="7.0">
+            <Button fx:id="btnMusic" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAudioState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones">
                <graphic>
                   <ImageView fx:id="soundIcon" fitHeight="19.0" fitWidth="20.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -115,6 +104,12 @@
                </graphic>
             </Button>
          </children>
-      </AnchorPane>
-   </bottom>
+         <BorderPane.margin>
+            <Insets bottom="10.0" />
+         </BorderPane.margin>
+      </VBox>
+   </right>
+   <left>
+      <AnchorPane prefHeight="609.0" prefWidth="663.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
