--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -4,9 +4,11 @@
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,9 +18,9 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="baseScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#handleDragged" onMousePressed="#handlePressed" prefHeight="640.0" prefWidth="1100.0" style="-fx-background-color: #191A1B;" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.baseController">
+<BorderPane fx:id="baseScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#handleDragged" onMousePressed="#handlePressed" prefHeight="610.0" prefWidth="1050.0" style="-fx-background-color: #191A1B;" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.baseController">
    <top>
-      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="1100.0" style="-fx-background-color: #474B4F;" BorderPane.alignment="CENTER">
+      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="1100.0" style="-fx-background-color: #181818;" BorderPane.alignment="CENTER">
          <children>
             <HBox id="hboxBotones" fx:id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
                <children>
@@ -33,83 +35,147 @@
       </HBox>
    </top>
    <right>
-      <VBox prefHeight="609.0" prefWidth="409.0" style="-fx-background-color: #191A1B;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="599.0" prefWidth="358.0" style="-fx-background-color: #191A1B;" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" prefHeight="29.0" prefWidth="409.0" style="-fx-text-fill: #48494B;" styleClass="textoSecundario" text="JavaFx Simulation">
+            <Label alignment="CENTER" prefHeight="29.0" prefWidth="441.0" style="-fx-text-fill: #0F9D58;" styleClass="textoSecundario" text="JavaFx Simulation">
                <font>
                   <Font size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="40.0" />
+                  <Insets />
                </VBox.margin>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="409.0" style="-fx-text-fill: #E7EAE0;" text="The Josephus Problem ">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="440.0" style="-fx-text-fill: #E7EAE0;" text="The Josephus Problem ">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="43.0" prefWidth="409.0" style="-fx-text-fill: #E7EAE0;" text="Settings">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="43.0" prefWidth="441.0" style="-fx-text-fill: #FAF1E4;" text="Settings">
                <font>
-                  <Font size="20.0" />
+                  <Font size="19.0" />
                </font>
                <VBox.margin>
-                  <Insets top="15.0" />
+                  <Insets bottom="10.0" top="20.0" />
                </VBox.margin>
             </Label>
-            <Label prefHeight="27.0" prefWidth="179.0" style="-fx-text-fill: #E7EAE0;" text="Cantidad de Solados">
+            <Label prefHeight="27.0" prefWidth="438.0" style="-fx-text-fill: #E7EAE0;" text="Cantidad de Soldados">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <JFXSlider />
-            <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="409.0" spacing="30.0">
+            <JFXSlider majorTickUnit="10.0" max="60.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0">
+               <VBox.margin>
+                  <Insets bottom="3.0" left="1.0" right="1.0" top="10.0" />
+               </VBox.margin>
+               <cursor>
+                  <Cursor fx:constant="OPEN_HAND" />
+               </cursor></JFXSlider>
+            <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="409.0" spacing="20.0">
                <children>
-                  <Label style="-fx-text-fill: #E7EAE0;" text="Soldado Inicial">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Spinner editable="true" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="409.0" spacing="30.0">
-               <children>
-                  <Label style="-fx-text-fill: #E7EAE0;" text="Sentido">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <JFXRadioButton style="-fx-text-fill: #E7EAE0;" text="Horario" />
-                  <JFXRadioButton layoutX="65.0" layoutY="10.0" style="-fx-text-fill: #E7EAE0;" text="Antihorario" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="409.0" spacing="20.0">
-               <children>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" text="START" />
-                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" text="STOP" />
-                  <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="225.0" layoutY="19.0" prefHeight="40.0" prefWidth="75.0" text="RESET" />
+                  <HBox alignment="CENTER" prefHeight="52.0" prefWidth="168.0">
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="65.0" style="-fx-text-fill: #E7EAE0;" text="Inicio">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Spinner editable="true" prefHeight="25.0" prefWidth="76.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Spinner>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="315.0">
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="96.0" style="-fx-text-fill: #E7EAE0;" text="Sentido">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <VBox prefHeight="58.0" prefWidth="184.0">
+                           <children>
+                              <JFXRadioButton contentDisplay="CENTER" prefHeight="26.0" prefWidth="129.0" style="-fx-text-fill: #E7EAE0;" text="horario">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="sentido" />
+                                 </toggleGroup>
+                              </JFXRadioButton>
+                              <JFXRadioButton contentDisplay="CENTER" prefHeight="26.0" prefWidth="129.0" style="-fx-text-fill: #E7EAE0;" text="antihorario" toggleGroup="$sentido">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </JFXRadioButton>
+                           </children>
+                        </VBox>
+                     </children>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </HBox>
                </children>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="9.0" />
                </VBox.margin>
             </HBox>
-            <JFXButton alignment="CENTER_RIGHT" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" minWidth="35.0" prefHeight="30.0" prefWidth="54.0" style="-fx-background-radius: 50;" />
-            <Button fx:id="btnMusic" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAudioState" prefHeight="27.0" prefWidth="20.0" style="-fx-background-radius: 50;" styleClass="botones">
-               <graphic>
-                  <ImageView fx:id="soundIcon" fitHeight="19.0" fitWidth="20.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../icons/play.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="409.0" spacing="40.0" />
+            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" spacing="30.0">
+               <children>
+                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" style="-fx-text-fill: white;" text="START">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></JFXButton>
+                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" style="-fx-text-fill: white;" text="STOP">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></JFXButton>
+                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" style="-fx-text-fill: white;" text="RESET">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></JFXButton>
+               </children>
+               <VBox.margin>
+                  <Insets top="40.0" />
+               </VBox.margin>
+            </HBox>
+            <VBox prefHeight="200.0" prefWidth="100.0" />
+            <HBox nodeOrientation="RIGHT_TO_LEFT">
+               <children>
+                  <Button fx:id="btnMusic" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAudioState" prefHeight="34.0" prefWidth="37.0" style="-fx-background-radius: 50; -fx-background-color: #48494B;" styleClass="botones">
+                     <graphic>
+                        <ImageView fx:id="soundIcon" fitHeight="27.0" fitWidth="19.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../icons/play.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="15.0" right="-5.0" />
+               </VBox.margin>
+            </HBox>
          </children>
          <BorderPane.margin>
-            <Insets bottom="10.0" />
+            <Insets left="20.0" right="20.0" top="50.0" />
          </BorderPane.margin>
       </VBox>
    </right>
    <left>
-      <AnchorPane prefHeight="609.0" prefWidth="663.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="579.0" prefWidth="650.0" style="-fx-background-color: #333333;" BorderPane.alignment="CENTER" />
    </left>
 </BorderPane>
