--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -5,7 +5,6 @@
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -22,7 +21,7 @@
    <top>
       <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="31.0" prefWidth="1100.0" style="-fx-background-color: #181818;" BorderPane.alignment="CENTER">
          <children>
-            <HBox id="hboxBotones" fx:id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
+            <HBox id="hboxBotones" alignment="CENTER" prefWidth="52.0" spacing="5.0">
                <children>
                   <Circle id="btnClose" fx:id="btnClose" fill="#cd234b" onMouseClicked="#handleClose" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" style="-fx-effect: black;" />
                   <Circle id="btnMinimize" fx:id="btnMinimize" fill="#c39d2d" onMouseClicked="#handleMin" radius="9.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
@@ -47,7 +46,7 @@
             </Label>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="440.0" style="-fx-text-fill: #E7EAE0;" text="The Josephus Problem ">
                <font>
-                  <Font size="28.0" />
+                  <Font name="System Bold" size="28.0" />
                </font>
             </Label>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="43.0" prefWidth="441.0" style="-fx-text-fill: #FAF1E4;" text="Settings">
@@ -63,7 +62,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <JFXSlider majorTickUnit="10.0" max="60.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0">
+            <JFXSlider fx:id="amountSlider" majorTickUnit="10.0" max="60.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="35.0">
                <VBox.margin>
                   <Insets bottom="3.0" left="1.0" right="1.0" top="10.0" />
                </VBox.margin>
@@ -72,21 +71,21 @@
                </cursor></JFXSlider>
             <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="409.0" spacing="20.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="52.0" prefWidth="168.0">
+                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
                      <children>
                         <Label prefHeight="26.0" prefWidth="65.0" style="-fx-text-fill: #E7EAE0;" text="Inicio">
                            <font>
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Spinner editable="true" prefHeight="25.0" prefWidth="76.0">
+                        <Spinner fx:id="startIndex" prefHeight="25.0" prefWidth="76.0">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Spinner>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="315.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="315.0" spacing="10.0">
                      <children>
                         <Label prefHeight="26.0" prefWidth="96.0" style="-fx-text-fill: #E7EAE0;" text="Sentido">
                            <font>
@@ -123,21 +122,21 @@
             <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="409.0" spacing="40.0" />
             <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" spacing="30.0">
                <children>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" style="-fx-text-fill: white;" text="START">
+                  <JFXButton fx:id="btnStart" alignment="CENTER" buttonType="RAISED" onAction="#startSimulation" prefHeight="40.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white; -fx-background-color: #014023;" text="START" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></JFXButton>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" style="-fx-text-fill: white;" text="STOP">
+                  <JFXButton fx:id="btnStop" alignment="CENTER" buttonType="RAISED" onAction="#stopSimulation" prefHeight="40.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white;" text="STOP">
                      <font>
                         <Font size="14.0" />
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></JFXButton>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" prefHeight="40.0" prefWidth="75.0" style="-fx-text-fill: white;" text="RESET">
+                  <JFXButton fx:id="btnReset" alignment="CENTER" buttonType="RAISED" onAction="#resetSettings" prefHeight="40.0" prefWidth="75.0" ripplerFill="#05a66b" style="-fx-text-fill: white;" text="RESET">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -152,9 +151,9 @@
             <VBox prefHeight="200.0" prefWidth="100.0" />
             <HBox nodeOrientation="RIGHT_TO_LEFT">
                <children>
-                  <Button fx:id="btnMusic" contentDisplay="CENTER" mnemonicParsing="false" onAction="#toggleAudioState" prefHeight="34.0" prefWidth="37.0" style="-fx-background-radius: 50; -fx-background-color: #48494B;" styleClass="botones">
+                  <JFXButton fx:id="btnMusic" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#toggleAudioState" ripplerFill="#a8a8a8" style="-fx-text-fill: white; -fx-background-color: #48494B; -fx-background-radius: 50;" text=" ">
                      <graphic>
-                        <ImageView fx:id="soundIcon" fitHeight="27.0" fitWidth="19.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="27.0" fitWidth="19.0" opacity="0.83" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../icons/play.png" />
                            </image>
@@ -163,7 +162,7 @@
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
-                  </Button>
+                  </JFXButton>
                </children>
                <VBox.margin>
                   <Insets bottom="15.0" right="-5.0" />
@@ -176,6 +175,6 @@
       </VBox>
    </right>
    <left>
-      <AnchorPane prefHeight="579.0" prefWidth="650.0" style="-fx-background-color: #333333;" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="circleSpace" prefHeight="579.0" prefWidth="650.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER" />
    </left>
 </BorderPane>
