--- a/josephus_problem/src/main/resources/app/base.fxml
+++ b/josephus_problem/src/main/resources/app/base.fxml
@@ -62,7 +62,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <JFXSlider fx:id="amountSlider" majorTickUnit="10.0" max="60.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="20.0">
+            <JFXSlider fx:id="amountSlider" majorTickUnit="10.0" max="60.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="20.0">
                <VBox.margin>
                   <Insets bottom="3.0" left="1.0" right="1.0" top="10.0" />
                </VBox.margin>
